# New-Simu

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  makefile
config/: cambios.lang  chance_ChutCercano.lang  chance_ChutLejano.lang  chance_Corner.lang  chance_vsDF.lang  chance_vsGK.lang  chpos.lang  consolation.lang  equalizer.lang  failDF_Corner.lang  failDF_vsDF.lang  goal.lang  hope.lang  injury.lang  injury_report.lang  lateequalizer.lang  latewinner.lang  pass_Corner.lang  pass_vsDF.lang  save.lang  tacticas.lang  winner.lang
doc/: Alineaciones.tex  Eventos.tex  Injuries.tex  release.notes
include/: Commentary.h  RandomTools.h  Simu.h  alineacion.h  arraytools.h  equipo.h  instruccion.h  jug_stats.h  jugador.h  partido.h  position.h  tactic.h  textmisc.h
scripts/: run-tests.sh
src/: .gitignore  Commentary.cpp  Int_array.cpp  Int_array.h  RandomTools.cpp  Simu.cpp  ability.cpp  ability.h  alineacion.cpp  arraytools.cpp  equipo.cpp  equipo.h  instruccion.cpp  jug_stats.cpp  jugador.cpp  main.cpp  partido.cpp  position.cpp  position.h  tactic.cpp  tactic.h  textmisc.cpp  textmisc.h
test/: .gitignore  ros.txt  rossht.txt
